backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-backend
  namespace: default
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nigelpoulton/ckad:pluralsight_backend
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /api/v1/
            port: api
        livenessProbe:
          httpGet:
            path: /api/v1/
            port: api
        ports:
          - name: api
            containerPort: 8000
