frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nigelpoulton/ckad:pluralsight_vue
          imagePullPolicy: ifNotPresent # only for local testing
          readinessProbe:
            httpGet:
              path: /
              port: server
          livenessProbe:
            httpGet:
              path: /
              port: server
          ports:
            - name: server
              containerPort: 8080
