svc-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend-svc
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: backend
