svc-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    run: frontend-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: frontend
