svc.yml
apiVersion: v1
kind: Service
metadata:
  name: internal-app
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 8080
  selector:
    course: ckad
